обновлена документация на swagger
